--- a/pages/second/second.wxml
+++ b/pages/second/second.wxml
@@ -62,8 +62,7 @@
             <em class="fl ml05">*</em>
           </label>
           <input class="fl ml25 text1" name="inputPerson" value="{{inputPerson}}"   
-          bindfocus="bindfocus"
-          bindblur="bindblur"
+         
           placeholder-style="color:#b9b9b9"
           placeholder="请输入收货人" />
         </view>
@@ -73,8 +72,6 @@
             <em class="fl ml05">*</em>
           </label>
           <input class="fl ml25 text1" name="inputPhone"  value="{{inputPhone}}"
-          bindfocus="bindfocus"
-          bindblur="bindblur"
           placeholder-style="color:#b9b9b9"
           placeholder="请输入电话" />
         </view>
@@ -84,15 +81,12 @@
             <em class="fl ml05">*</em>
           </label>
           <input class="fl ml25 text1" name="inputAddress"  value="{{inputAddress}}"
-          bindfocus="bindfocus"
-          bindblur="bindblur"
           placeholder-style="color:#b9b9b9"
           placeholder="请输入地址" />
         </view>
       </view>
-      <view class="mt20 getAddress" bindtap="getAddress">
-      <image class="mt20" bindtap="getAddress" src='http://ecc-product.oss-cn-beijing.aliyuncs.com/xcx/%E8%8E%B7%E5%8F%96%E5%9C%B0%E5%9D%80@2x.png'></image>
-          <!-- <button type="primary" >获取地址</button> -->
+      <view class="mt20 getAddress" catchtap="getAddress">
+      <image class="mt20" catchtap="getAddress" src='http://ecc-product.oss-cn-beijing.aliyuncs.com/xcx/%E8%8E%B7%E5%8F%96%E5%9C%B0%E5%9D%80@2x.png'></image>
         </view>
       <view class="mt20">
         <button type="primary" formType="submit">立即购买</button>
