--- a/pages/myOrder/myOrder.wxml
+++ b/pages/myOrder/myOrder.wxml
@@ -2,7 +2,7 @@
   <!-- <view class="order_header">全部订单</view> -->
   <view class="order_list">
 
-    <view class="order_list_li" wx:for="{{orderList}}">
+    <view class="order_list_li" wx:for="{{orderList}}" bindtap="logistics" data-billId="{{item.billId}}">
       <view class="order_list_li_number">订单号: {{item.billId}}</view>
       <view class="order_list_li_mes">
         <view class="order_list_li_mes_img">
@@ -18,7 +18,6 @@
         </view>
       </view>
     </view>
-
   </view>
 
 </view>
