--- a/pages/myOrder/myOrder.wxss
+++ b/pages/myOrder/myOrder.wxss
@@ -18,13 +18,14 @@
 }
 .order_list_li{
   padding: 4% 4%;
+  border: 1px dashed #f2f2f2;
   /* background: red; */
 }
 .order_list_li_number{
   padding: 0 0 2% 0;
   font-size: 26rpx;
   color: #a6a6a6;
-  border-bottom: 1rpx solid #f2f2f2; 
+  /* border-bottom: 1rpx solid #f2f2f2;  */
 }
 .order_list_li_mes{
   overflow: hidden;
