--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,18 +1,16 @@
   <view class="index_wrap">
     <view class="header_card">
       <view class="header_card_bgc">
-        <view class="header_card_image" bindtap="toSweepOrder">
+        <view class="header_card_image" >
           <image src='http://ecc-product.oss-cn-beijing.aliyuncs.com/xcx/地图底板@3x.png' ></image>
         </view>
-        <view class="header_card_cont" bindtap="toSweepOrder">
-          <image src='http://ecc-product.oss-cn-beijing.aliyuncs.com/xcx/地图-icon@3x.png' ></image>{{shopName}}
+        <view class="header_card_cont" >
+          <image src='http://ecc-product.oss-cn-beijing.aliyuncs.com/xcx/地图-icon@3x.png' ></image>
+          <view>{{shopName}}</view>
           <image src='http://ecc-product.oss-cn-beijing.aliyuncs.com/xcx/流连logo@3x.png' class='logo'></image>
         </view>
-        
       </view>
-        
     </view>
-
     <view class="code_record">
       <view class="code_record_wrap">
         <view class="code_record_title">
