--- a/pages/logistics/index.wxss
+++ b/pages/logistics/index.wxss
@@ -2,6 +2,18 @@
   width: 100%;
   height: 100%;
 }
+.courierNumber{
+  padding:10rpx;
+  font-size:30rpx;
+  width:95%;
+  height:50rpx;
+  background:#f2f2f2;
+  margin:10rpx;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  color: #555;
+}
 .logistics_list{
   margin: 20rpx;
   border-left: 1px solid #ccc;
