--- a/pages/noshop/noshop.wxss
+++ b/pages/noshop/noshop.wxss
@@ -4,6 +4,8 @@
   height: 100%;
   overflow: hidden;
   background-color: #fff;
+  position: relative;
+  top: 0;
 }
  .header_card{
   width: 100%;
@@ -119,4 +121,17 @@ left: 420rpx;
    background: url("http://ecc-product.oss-cn-beijing.aliyuncs.com/xcx/CustomerServices.png") no-repeat center ;
   background-size: 100% 100%;
   
+}
+.xqbtn{
+   position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 95rpx;
+  background: #f7f5f5;
+  font-size: 26rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background: #f7f5f5 url("http://ecc-product.oss-cn-beijing.aliyuncs.com/xcx/CustomerServices.png") no-repeat 230rpx ;
+  background-size: 10% 100%; */
 }
